Add OpenAI summaries and Playback UI updates

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "openai": "^4.79.0"
   }
 }
